# ROS2-study-notes

ROS2笔记/: ROS2.md  ROS2基础.md  ROS2高级.md
ros2_project/src/1-1-2ament_auto_add_library/recognizer/: CMakeLists.txt
ros2_project/src/1-1-2ament_auto_add_library/recognizer/src/: recognizer.cpp
ros2_project/src/1-1-2ament_auto_add_library/use_recognizer/: CMakeLists.txt  package.xml
ros2_project/src/1-1-2ament_auto_add_library/use_recognizer/src/: use_recognize_node.cpp
ros2_project/src/1-1-2rclcpp_libraries/1-1-2ament_auto_add_library/recognizer/: package.xml
ros2_project/src/1-1-2rclcpp_libraries/1-1-2ament_auto_add_library/recognizer/include/recognizer/: recognizer.hpp
ros2_project/src/1-1-2rclcpp_libraries/1-1-2target_link_libraries/: CMakeLists.txt  package.xml
ros2_project/src/1-1-2rclcpp_libraries/1-1-2target_link_libraries/src/: use_boost.cpp
ros2_project/src/1-1-3setup-py/: package.xml  setup.cfg  setup.py
ros2_project/src/2-1TopicCommunication/one-way_topic_communication_cpp/: CMakeLists.txt  package.xml
ros2_project/src/2-1TopicCommunication/one-way_topic_communication_cpp/src/: GetHello.cpp  SayHello.cpp
ros2_project/src/2-1TopicCommunication/one_way_topic_communication_py/: package.xml  setup.cfg  setup.py
ros2_project/src/2-1TopicCommunication/one_way_topic_communication_py/one_way_topic_communication_py/: GetHello.py  SayHello.py
ros2_project/src/2-1TopicCommunication/two-way_topic_communication_cpp/: CMakeLists.txt  package.xml
ros2_project/src/2-1TopicCommunication/two-way_topic_communication_cpp/src/: Laowang.cpp  Lisi.cpp
ros2_project/src/2-1TopicCommunication/two_way_topic_communication_py/: package.xml  setup.cfg  setup.py
ros2_project/src/2-1TopicCommunication/two_way_topic_communication_py/two_way_topic_communication_py/: Laowang.py  Lisi.py
ros2_project/src/2-2ServiceCommunication/async_communication/: CMakeLists.txt  package.xml
ros2_project/src/2-2ServiceCommunication/async_communication/src/: client.cpp  server.cpp
ros2_project/src/2-2ServiceCommunication/srv_interfaces/: CMakeLists.txt  package.xml
ros2_project/src/2-2ServiceCommunication/srv_interfaces/srv/: AddTwoInts.srv
ros2_project/src/2-2ServiceCommunication/sync_communication/: CMakeLists.txt  package.xml
ros2_project/src/2-2ServiceCommunication/sync_communication/src/: client.cpp
ros2_project/src/2-3ActionCommunication/action_communication_cpp/: CMakeLists.txt  package.xml
ros2_project/src/2-3ActionCommunication/action_communication_cpp/src/: action_client.cpp  action_server.cpp
ros2_project/src/2-3ActionCommunication/action_communication_py/: package.xml  setup.cfg  setup.py
ros2_project/src/2-3ActionCommunication/action_communication_py/action_communication_py/: action_client.py  action_server.py
ros2_project/src/2-3ActionCommunication/action_interfaces/: CMakeLists.txt  package.xml
ros2_project/src/2-5custom_ros_interfaces/custom_action_interfaces/: CMakeLists.txt  package.xml
ros2_project/src/2-5custom_ros_interfaces/custom_action_interfaces/action/: Fibonacci.action
ros2_project/src/2-5custom_ros_interfaces/custom_msg_interfaces/: CMakeLists.txt  package.xml
ros2_project/src/2-5custom_ros_interfaces/custom_msg_interfaces/msg/: Test.msg
ros2_project/src/2-5custom_ros_interfaces/custom_srv_interfaces/: CMakeLists.txt  package.xml
ros2_project/src/2-5custom_ros_interfaces/custom_srv_interfaces/srv/: Novel.srv
ros2_project/src/2-5custom_ros_interfaces/use_custom_msg_interfaces_cpp/: CMakeLists.txt  package.xml
ros2_project/src/2-5custom_ros_interfaces/use_custom_msg_interfaces_cpp/src/: test_custom_msg.cpp
ros2_project/src/2-5custom_ros_interfaces/use_custom_msg_interfaces_py/: package.xml  setup.cfg  setup.py
ros2_project/src/2-5custom_ros_interfaces/use_custom_msg_interfaces_py/use_custom_msg_interfaces_py/: test_custom_msg.py
ros2_project/src/2-5custom_ros_interfaces/use_custom_srv_interfaces_cpp/: CMakeLists.txt  package.xml
ros2_project/src/2-5custom_ros_interfaces/use_custom_srv_interfaces_cpp/src/: test_custom_srv_client.cpp  test_custom_srv_server.cpp
ros2_project/src/2-5custom_ros_interfaces/use_custom_srv_interfaces_py/: package.xml  setup.cfg  setup.py
ros2_project/src/2-5custom_ros_interfaces/use_custom_srv_interfaces_py/use_custom_srv_interfaces_py/: test_custom_srv_client.py  test_custom_srv_server.py
ros2_project/src/2-6ParameterSystem/use_parameter_system_cpp/: CMakeLists.txt  package.xml
ros2_project/src/2-6ParameterSystem/use_parameter_system_cpp/src/: serial_node.cpp
ros2_project/src/2-6ParameterSystem/use_parameter_system_py/: package.xml  setup.cfg  setup.py
ros2_project/src/2-6ParameterSystem/use_parameter_system_py/use_parameter_system_py/: serial_node.py
ros2_project/src/3-1introduce_launch/test_launch_cpp/: CMakeLists.txt  package.xml
ros2_project/src/3-1introduce_launch/test_launch_cpp/src/: test_node1.cpp  test_node2.cpp
ros2_project/src/3-1introduce_launch/test_launch_py/: package.xml  setup.py
ros2_project/src/3-1introduce_launch/test_launch_py/launch/: test_node.launch.py
ros2_project/src/3-1introduce_launch/test_launch_py/test_launch_py/: test_node1.py  test_node2.py
ros2_project/src/4ros2bag_programme/ros2bag_cpp/: CMakeLists.txt  package.xml
ros2_project/src/4ros2bag_programme/ros2bag_cpp/src/: simple_bag_recorder.cpp  simple_bag_writer.cpp
ros2_project/src/4ros2bag_programme/ros2bag_py/: package.xml  setup.cfg  setup.py
ros2_project/src/4ros2bag_programme/ros2bag_py/ros2bag_py/: reader_py.py  writer_py.py
ros2_project/src/5-2meta_package/meta_package/: CMakeLists.txt  package.xml
ros2_project/src/7pluginlib/define_pluginlib/: CMakeLists.txt  package.xml  plugin.xml
ros2_project/src/7pluginlib/define_pluginlib/include/define_pluginlib/: a_star_planner.hpp  planner_base.hpp
ros2_project/src/7pluginlib/define_pluginlib/src/: a_star_planner.cpp
ros2_project/src/7pluginlib/use_pluginlib/: CMakeLists.txt  package.xml
ros2_project/src/7pluginlib/use_pluginlib/src/: use_pluginlib.cpp
